css/style.css
/* ... */
@media (min-width: 769px) {
  .hero {
    min-height: calc(56.25vw + 260px);
  }
  .hero__bg {
    object-fit: contain;
    object-position: top center;
  }
  .hero__content {
    padding: 0 20px 60px;
  }
}

@media (max-width: 768px) and (orientation: landscape) {
  .hero {
    min-height: calc(100vh - var(--header-height));
  }
  .hero__bg {
    object-fit: cover;
    object-position: center;
  }
}

@media (max-width: 768px) and (orientation: portrait) {
  .hero {
    min-height: calc(100vh - var(--header-height));
  }
  .hero__bg {
    object-fit: cover;
    object-position: right center;
  }
}

